--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.1.0",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^7.1.0",
+    "framer-motion": "^11.2.6",
+    "mongodb": "^6.6.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
