--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
+    "@tabler/icons-react": "^3.5.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^7.1.0",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.2.9",
     "mongodb": "^6.6.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
