--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^7.1.0",
     "framer-motion": "^11.2.9",
     "mongodb": "^6.6.2",
+    "mongoose": "^8.5.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
