--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@tabler/icons-react": "^3.5.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.9",
     "mongodb": "^6.6.2",
     "mongoose": "^8.5.1",
